--- a/index.html
+++ b/index.html
@@ -5,10 +5,118 @@
     <meta content='IE=edge' http_equiv='X-UA-Compatible'>
     <meta charset='utf-8'>
     <meta content='width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no' name='viewport'>
+    <link href='https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <link href="/stylesheets/site.css" rel="stylesheet" />
     <script src="/javascripts/all.js"></script>
   </head>
   <body>
-    
+    <header>
+      <div class='wrapper'>
+        <img class='logo' src='images/vetmed_logo.png'>
+        <nav role='navigation'>
+          <ul class='navigation'>
+            <li class='nav-item'>
+              <a href='#'>
+                USŁUGI
+              </a>
+            </li>
+            <li class='nav-item'>
+              <a href='#'>
+                LEKARZE
+              </a>
+            </li>
+            <li class='nav-item'>
+              <a href='#'>
+                KONTAKT
+              </a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+    <section class='banner'>
+      <div class='wrapper'>
+        <h1 class='banner-title'>
+          Pierwsza prywatna
+          <br>
+          <span class='big-text'>przychodnia weterynaryjna w Tychach.</span>
+        </h1>
+        <h1 class='banner-title'>Lekarze z ponad 25 letnim doświadczeniem.</h1>
+        <h1 class='banner-title'>
+          Usługi w zakresie lecznictwa i profilaktyki
+          <br>
+          chorób małych zwierząt.
+        </h1>
+      </div>
+    </section>
+    <section class='wrapper'>
+      <h1>Oferowane usługi</h1>
+      <ul class='offer'>
+        <li class='offer-item'>
+          <h2>Profilaktyka</h2>
+          <ul>
+            <li class='service-item'>szczepienia</li>
+            <li class='service-item'>odrobaczania</li>
+          </ul>
+        </li>
+        <li class='offer-item'>
+          <h2>Diagnostyka i leczenie</h2>
+          <ul>
+            <li class='service-item'>
+              badania laboratoryjne
+              <br>
+              (hematologia, biochemia)
+            </li>
+            <li class='service-item'>USG, EKG</li>
+            <li class='service-item'>laseroterapia, krioterapia</li>
+            <li class='service-item'>chirurgia</li>
+          </ul>
+        </li>
+        <li class='offer-item'>
+          <h2>Sklepik</h2>
+          <ul>
+            <li class='service-item'>karmy i diety lecznicze</li>
+            <li class='service-item'>paszporty i mikroczipy</li>
+          </ul>
+        </li>
+      </ul>
+    </section>
+    <section class='quote-wrapper'>
+      <div class='quote'>
+        <div class='quote-decor'>”</div>
+        <p class='quote-content'>
+          „Ekstra sprawa, świetne słuchawki, pieskowi odrosła łapa.
+          <br>
+          Ma teraz pięć! Pozdrawiam.”
+        </p>
+        <p class='quote-author'>- Małgorzata Belzebub</p>
+      </div>
+    </section>
+    <section class='wrapper'>
+      <h1>Nasi lekarze</h1>
+      <ul class='vets'>
+        <li class='vet'>
+          <div class='vet-photo-holder'>
+            <img class='vet-photo' src='images/daddy.jpeg'>
+          </div>
+          <h2>Bogusław Grzeszczuk</h2>
+          <p class='vet-description'>Absolwent Wydziału Weterynarii Akademii Rolniczej we Wrocławiu z 1988 roku. Specjalista chorób psów i kotów.</p>
+        </li>
+        <li class='vet'>
+          <div class='vet-photo-holder'>
+            <img class='vet-photo' src='images/alex.jpg'>
+          </div>
+          <h2>Dariusz Kamiński</h2>
+          <p class='vet-description'>Absolwent Wydziału Weterynarii Akademii Rolniczej we Wrocławiu z 1989 roku.</p>
+        </li>
+        <li class='vet'>
+          <div class='vet-photo-holder'>
+            <img class='vet-photo' src='images/bill.jpg'>
+          </div>
+          <h2>Wiesław Rutka</h2>
+          <p class='vet-description'>Absolwent Wydziału Weterynarii Akademii Rolniczej we Wrocławiu z 1985 roku. Specjalista chorób psów i kotów. Specjalista chirurg.</p>
+        </li>
+      </ul>
+    </section>
   </body>
 </html>
