--- a/index.html
+++ b/index.html
@@ -62,11 +62,7 @@
         <li class='offer-item'>
           <h2>Diagnostyka i leczenie</h2>
           <ul>
-            <li class='service-item'>
-              badania laboratoryjne
-              <br>
-              (hematologia, biochemia)
-            </li>
+            <li class='service-item'>badania laboratoryjne<br/>(hematologia, biochemia)</li>
             <li class='service-item'>USG, EKG</li>
             <li class='service-item'>laseroterapia, krioterapia</li>
             <li class='service-item'>chirurgia</li>
@@ -84,12 +80,8 @@
     <section class='quote-wrapper'>
       <div class='quote'>
         <div class='quote-decor'>”</div>
-        <p class='quote-content'>
-          „Ekstra sprawa, świetne słuchawki, pieskowi odrosła łapa.
-          <br>
-          Ma teraz pięć! Pozdrawiam.”
-        </p>
-        <p class='quote-author'>- Małgorzata Belzebub</p>
+        <p class='quote-content'>Bardzo polecam tę przychodnię, korzystam z usług od ładnych paru lat i wszystkie moje psiaki były tu leczone, mam pełne zaufanie szczególnie do pana Bogusława Grzeszczuka, jest świetnym lekarzem od którego zawsze bije ciepłe uczucie do zwierząt, niesamowicie pozytywna osoba i bardzo fachowo podchodzi do wszystkich kwestii, serdecznie polecam.</p>
+        <p class='quote-author'>- Ewelina</p>
       </div>
     </section>
     <section class='wrapper'>
@@ -97,26 +89,52 @@
       <ul class='vets'>
         <li class='vet'>
           <div class='vet-photo-holder'>
-            <img class='vet-photo' src='images/daddy.jpeg'>
+            <img class='vet-photo' src='images/grzeszczuk.jpg'>
           </div>
           <h2>Bogusław Grzeszczuk</h2>
           <p class='vet-description'>Absolwent Wydziału Weterynarii Akademii Rolniczej we Wrocławiu z 1988 roku. Specjalista chorób psów i kotów.</p>
         </li>
         <li class='vet'>
           <div class='vet-photo-holder'>
-            <img class='vet-photo' src='images/alex.jpg'>
+            <img class='vet-photo' src='images/kaminski.jpg'>
           </div>
           <h2>Dariusz Kamiński</h2>
           <p class='vet-description'>Absolwent Wydziału Weterynarii Akademii Rolniczej we Wrocławiu z 1989 roku.</p>
         </li>
         <li class='vet'>
           <div class='vet-photo-holder'>
-            <img class='vet-photo' src='images/bill.jpg'>
+            <img class='vet-photo' src='images/rutka.jpg'>
           </div>
           <h2>Wiesław Rutka</h2>
           <p class='vet-description'>Absolwent Wydziału Weterynarii Akademii Rolniczej we Wrocławiu z 1985 roku. Specjalista chorób psów i kotów. Specjalista chirurg.</p>
         </li>
       </ul>
+    </section>
+    <section class='quote-wrapper'>
+      <div class='quote'>
+        <div class='quote-decor'>”</div>
+        <p class='quote-content'>Polecam tę fachową lecznicę z pełnym przekonaniem! :)) Wizytuję tu już od blisko 20 lat. Czasem trzeba trochę posiedzieć w poczekalni, ale za to panowie mają dużo czasu i zaangażowania dla każdego pacjenta, co mi się podoba najbardziej!!! :))) Pozdrowienia i podziękowania dla p. Kamińskiego i p. Grzeszczuka :)</p>
+        <p class='quote-author'>- Dominika</p>
+      </div>
+    </section>
+    <section class='wrapper'>
+      <h1>Kontakt</h1>
+      <div class='contact'>
+        <div class='contact-section'>
+          <h2>Vet-Med Bis s.c.</h2>
+          <p>ul. Dębowa 6a<br/>43-100 Tychy</p>
+          <p>telefon: (32) 227 31 12</p>
+        </div>
+        <div class='contact-section'>
+          <h2>Godziny otwarcia</h2>
+          <p>poniedziałek - piątek: 8:00 - 20:00</p>
+          <p>sobota: 8:00 - 12:00</p>
+          <p>niedziela: 9:00 - 12:00</p>
+        </div>
+      </div>
+      <div class='map'>
+        <img class='google-map' src='http://placehold.it/500x500'>
+      </div>
     </section>
   </body>
 </html>
