--- a/index.html
+++ b/index.html
@@ -11,22 +11,22 @@
   </head>
   <body>
     <header>
-      <div class='wrapper'>
+      <div class='header-wrapper'>
         <img class='logo' src='images/vetmed_logo.png'>
         <nav role='navigation'>
           <ul class='navigation'>
             <li class='nav-item'>
-              <a href='#'>
+              <a href='#offer'>
                 USŁUGI
               </a>
             </li>
             <li class='nav-item'>
-              <a href='#'>
+              <a href='#vets'>
                 LEKARZE
               </a>
             </li>
             <li class='nav-item'>
-              <a href='#'>
+              <a href='#contact'>
                 KONTAKT
               </a>
             </li>
@@ -39,36 +39,39 @@
         <h1 class='banner-title'>
           Pierwsza prywatna
           <br>
-          <span class='big-text'>przychodnia weterynaryjna w Tychach.</span>
+          <span class='big-text'>przychodnia weterynaryjna w&nbsp;Tychach.</span>
         </h1>
-        <h1 class='banner-title'>Lekarze z ponad 25 letnim doświadczeniem.</h1>
+        <h1 class='banner-title'>Lekarze z&nbsp;ponad 25&nbsp;letnim doświadczeniem.</h1>
         <h1 class='banner-title'>
-          Usługi w zakresie lecznictwa i profilaktyki
+          Usługi w zakresie lecznictwa i&nbsp;profilaktyki
           <br>
           chorób małych zwierząt.
         </h1>
       </div>
     </section>
-    <section class='wrapper'>
+    <section class='wrapper offers-container' id='offer'>
       <h1>Oferowane usługi</h1>
       <ul class='offer'>
-        <li class='offer-item'>
+        <li class='offer-item prevention'>
+          <div class='offer-icon'></div>
           <h2>Profilaktyka</h2>
           <ul>
             <li class='service-item'>szczepienia</li>
             <li class='service-item'>odrobaczania</li>
           </ul>
         </li>
-        <li class='offer-item'>
+        <li class='diagnostics offer-item'>
+          <div class='offer-icon'></div>
           <h2>Diagnostyka i leczenie</h2>
           <ul>
             <li class='service-item'>badania laboratoryjne<br/>(hematologia, biochemia)</li>
-            <li class='service-item'>USG, EKG</li>
+            <li class='service-item'>USG, EKG, Rtg</li>
             <li class='service-item'>laseroterapia, krioterapia</li>
             <li class='service-item'>chirurgia</li>
           </ul>
         </li>
-        <li class='offer-item'>
+        <li class='offer-item shop'>
+          <div class='offer-icon'></div>
           <h2>Sklepik</h2>
           <ul>
             <li class='service-item'>karmy i diety lecznicze</li>
@@ -80,11 +83,67 @@
     <section class='quote-wrapper'>
       <div class='quote'>
         <div class='quote-decor'>”</div>
-        <p class='quote-content'>Bardzo polecam tę przychodnię, korzystam z usług od ładnych paru lat i wszystkie moje psiaki były tu leczone, mam pełne zaufanie szczególnie do pana Bogusława Grzeszczuka, jest świetnym lekarzem od którego zawsze bije ciepłe uczucie do zwierząt, niesamowicie pozytywna osoba i bardzo fachowo podchodzi do wszystkich kwestii, serdecznie polecam.</p>
-        <p class='quote-author'>- Ewelina</p>
+        <div class='quotes'>
+          <div class='quote-element'>
+            <p class='quote-content'>Jestem zachwycony, strasznie bałem się wizyty u weterynarza, ale miło sympatycznie, z myślą o pupilu :) Jestem zachwycony podejściem i profesjonalizmem!! Polecam :)</p>
+            <p class='quote-author'>- Karol Kiszka</p>
+          </div>
+          <div class='quote-element'>
+            <p class='quote-content'>Zawsze profesjonalne i indywidualne podejście do zwierząt, Pan Grzeszczuk, Kamiński i Rutka to lekarze z powołania i to się czuje. Moje psy leczę od lat wyłącznie u nich.</p>
+            <p class='quote-author'>- Jarek Banicki</p>
+          </div>
+          <div class='quote-element'>
+            <p class='quote-content'>Chciałabym podziękować za fachową opiekę nad naszą Nutką. Szczególne podziękowania dla p. Grzeszczuka i p. Kamińskiego za poświęcony czas, za ciepło i serce jakie wkładali by ratować naszą psinkę. Polecam gorąco tę przychodnię i tych wspaniałych, tam pracujących, lekarzy! Dziekuję z całego serca.</p>
+            <p class='quote-author'>- Magdalena M.</p>
+          </div>
+          <div class='quote-element'>
+            <p class='quote-content'>Witam. Jestem bardzo zadowolona z opieki tej właśnie przychodni dla zwierząt. Korzystam z miej od ok. 1994 r. Teraz kiedy tylko potrzebuje ponieważ nie mieszkam w Polsce zawsze dzwonię tylko do Nich:) I nigdy sie nie zawiodłam. Serdecznie polecam i cieszę się że mamy w Tychach tak świetnych Weterynarzy. Pozdrawiam.</p>
+            <p class='quote-author'>- Bogdanka</p>
+          </div>
+          <div class='quote-element'>
+            <p class='quote-content'>Z pełnym zaangażowaniem, od razu widać, że lekarzom zależy na wyleczeniu pacjenta, a nie na zarobku. Ciepłe podejście do zwierząt, profesjonalne wytłumaczenie problemu właścicielowi. Znają się nie tylko na psach i kotach, lecz również na gryzoniach. Jestem bardzo zadowolona z lekarzy tu pracujących i w przyszłości nie zastanowię się nad odwiedzeniem tej właśnie przychodni. W 100% polecam!</p>
+            <p class='quote-author'>- Daria Płocharczyk</p>
+          </div>
+          <div class='quote-element'>
+            <p class='quote-content'>Bardzo profesjonalnie a jednocześnie ciepło i życzliwie. Co istotne, można tak powiedzieć o wszystkich lekarzach tej przychodni.Zero komercji za to miłość i szacunek dla zwierząt widać na każdym kroku. Korzystam z usług tej przychodni od wielu lat i nigdy się nie zawiodłam.</p>
+            <p class='quote-author'>- Irena</p>
+          </div>
+          <div class='quote-element'>
+            <p class='quote-content'>Polecam tę fachową lecznicę z pełnym przekonaniem! :)) Wizytuję tu już od blisko 20 lat. Czasem trzeba trochę posiedzieć w poczekalni, ale za to panowie mają dużo czasu i zaangażowania dla każdego pacjenta, co mi się podoba najbardziej!!! :))) Pozdrowienia i podziękowania dla p. Kamińskiego i p. Grzeszczuka :)</p>
+            <p class='quote-author'>- Dominika</p>
+          </div>
+          <div class='quote-element'>
+            <p class='quote-content'>Profesjonalnie, rzeczowo, ale ciepło. Szybko, ale dokładnie. I, choć cena nie gra roli - to wcale nie drogo. Polecam!!!</p>
+            <p class='quote-author'>- Ewa</p>
+          </div>
+          <div class='quote-element'>
+            <p class='quote-content'>Byłam już w kilku poradniach weterynaryjnych, ale jak jest szybka awaria z kotem, intuicyjnie pędzę tu. Fachowa ekipa i porządny sprzęt, decyzje o jego wykorzystaniu zapadają natychmiast (jest problem? Od razu USG i sprawdzamy, o co chodzi). Już raz mi tu kota przywrócili z powrotem do żywych. Szczególnie polecam p. Bogusława - bez względu na długość oczekującej kolejki kudłatych pacjentów zajmie się zwierzęciem troskliwie, poświęcając mu odpowiednio dużo czasu i zainteresowania. Ciepła, życzliwa osoba z prawdziwym powołaniem!</p>
+            <p class='quote-author'>- Ola</p>
+          </div>
+          <div class='quote-element'>
+            <p class='quote-content'>Polecam tę przychodnię. Choć pozwoliłam Cookiemu odejść, wiedziałam, że Ci lekarze byliby w stanie o niego walczyć do końca. Nigdy nie widziałam tak profesjonalnej opieki, troski i dbania o zwierzęta jaką znalazłam tam. Na pierwszym miejscu są tam zwierzęta, a nie portfele właścicieli. I jeśli kiedykolwiek będę szła z jakimś swoim pupilem do weterynarza to pójdę tylko do tej przychodni.</p>
+            <p class='quote-author'>- Aleksandra Witwicka</p>
+          </div>
+          <div class='quote-element'>
+            <p class='quote-content'>Polecam serdecznie Przychodnię Weterynaryjną Vet-Med, gdyż pracują w niej doskonali specjaliści, którzy są fachowcami w swojej dziedzinie, o czym przekonałam się ja i mój pies Cziko.</p>
+            <p class='quote-author'>- Asia</p>
+          </div>
+          <div class='quote-element'>
+            <p class='quote-content'>Bardzo polecam tę przychodnię, korzystam z usług od ładnych paru lat i wszystkie moje psiaki były tu leczone, mam pełne zaufanie szczególnie do pana Bogusława Grzeszczuka, jest świetnym lekarzem od którego zawsze bije ciepłe uczucie do zwierząt, niesamowicie pozytywna osoba i bardzo fachowo podchodzi do wszystkich kwestii, serdecznie polecam.</p>
+            <p class='quote-author'>- Ewelina</p>
+          </div>
+          <div class='quote-element'>
+            <p class='quote-content'>Chciałabym tą drogą podziękować Lekarzom tej przychodni za bardzo fachową opiekę nad moim pupilkiem Mucką i za udana operację.</p>
+            <p class='quote-author'>- Urszula Pakosz</p>
+          </div>
+          <div class='quote-element'>
+            <p class='quote-content'>Jestem szczęśliwą właścicielką 7. miesięcznego pieska, który dzięki pomocy lekarza weterynarii Wiesława Rutki został szybko zdiagnozowany i wyleczony. Teraz szczęśliwie biega i cieszy się życiem dzięki pomocy, która została mu okazana. Bardzo serdecznie polecam ten gabinet weterynaryjny, ponieważ mają bardzo miłych lekarzy, którzy są przyjaciółmi zwierząt i starają się jak tylko mogą, aby pomóc chorym i bezbronnym zwierzątkom.</p>
+            <p class='quote-author'>- Natalia Mordoń</p>
+          </div>
+        </div>
       </div>
     </section>
-    <section class='wrapper'>
+    <section class='wrapper vets-container' id='vets'>
       <h1>Nasi lekarze</h1>
       <ul class='vets'>
         <li class='vet'>
@@ -92,7 +151,7 @@
             <img class='vet-photo' src='images/grzeszczuk.jpg'>
           </div>
           <h2>Bogusław Grzeszczuk</h2>
-          <p class='vet-description'>Absolwent Wydziału Weterynarii Akademii Rolniczej we Wrocławiu z 1988 roku. Specjalista chorób psów i kotów.</p>
+          <p class='vet-description'>Absolwent Wydziału Weterynarii Akademii Rolniczej we Wrocławiu z 1988 roku. Specjalista chorób psów i&nbsp;kotów.</p>
         </li>
         <li class='vet'>
           <div class='vet-photo-holder'>
@@ -106,24 +165,83 @@
             <img class='vet-photo' src='images/rutka.jpg'>
           </div>
           <h2>Wiesław Rutka</h2>
-          <p class='vet-description'>Absolwent Wydziału Weterynarii Akademii Rolniczej we Wrocławiu z 1985 roku. Specjalista chorób psów i kotów. Specjalista chirurg.</p>
+          <p class='vet-description'>Absolwent Wydziału Weterynarii Akademii Rolniczej we Wrocławiu z 1985 roku. Specjalista chorób psów i&nbsp;kotów. Specjalista chirurg.</p>
         </li>
       </ul>
     </section>
     <section class='quote-wrapper'>
       <div class='quote'>
         <div class='quote-decor'>”</div>
-        <p class='quote-content'>Polecam tę fachową lecznicę z pełnym przekonaniem! :)) Wizytuję tu już od blisko 20 lat. Czasem trzeba trochę posiedzieć w poczekalni, ale za to panowie mają dużo czasu i zaangażowania dla każdego pacjenta, co mi się podoba najbardziej!!! :))) Pozdrowienia i podziękowania dla p. Kamińskiego i p. Grzeszczuka :)</p>
-        <p class='quote-author'>- Dominika</p>
+        <div class='quotes'>
+          <div class='quote-element'>
+            <p class='quote-content'>Jestem zachwycony, strasznie bałem się wizyty u weterynarza, ale miło sympatycznie, z myślą o pupilu :) Jestem zachwycony podejściem i profesjonalizmem!! Polecam :)</p>
+            <p class='quote-author'>- Karol Kiszka</p>
+          </div>
+          <div class='quote-element'>
+            <p class='quote-content'>Zawsze profesjonalne i indywidualne podejście do zwierząt, Pan Grzeszczuk, Kamiński i Rutka to lekarze z powołania i to się czuje. Moje psy leczę od lat wyłącznie u nich.</p>
+            <p class='quote-author'>- Jarek Banicki</p>
+          </div>
+          <div class='quote-element'>
+            <p class='quote-content'>Chciałabym podziękować za fachową opiekę nad naszą Nutką. Szczególne podziękowania dla p. Grzeszczuka i p. Kamińskiego za poświęcony czas, za ciepło i serce jakie wkładali by ratować naszą psinkę. Polecam gorąco tę przychodnię i tych wspaniałych, tam pracujących, lekarzy! Dziekuję z całego serca.</p>
+            <p class='quote-author'>- Magdalena M.</p>
+          </div>
+          <div class='quote-element'>
+            <p class='quote-content'>Witam. Jestem bardzo zadowolona z opieki tej właśnie przychodni dla zwierząt. Korzystam z miej od ok. 1994 r. Teraz kiedy tylko potrzebuje ponieważ nie mieszkam w Polsce zawsze dzwonię tylko do Nich:) I nigdy sie nie zawiodłam. Serdecznie polecam i cieszę się że mamy w Tychach tak świetnych Weterynarzy. Pozdrawiam.</p>
+            <p class='quote-author'>- Bogdanka</p>
+          </div>
+          <div class='quote-element'>
+            <p class='quote-content'>Z pełnym zaangażowaniem, od razu widać, że lekarzom zależy na wyleczeniu pacjenta, a nie na zarobku. Ciepłe podejście do zwierząt, profesjonalne wytłumaczenie problemu właścicielowi. Znają się nie tylko na psach i kotach, lecz również na gryzoniach. Jestem bardzo zadowolona z lekarzy tu pracujących i w przyszłości nie zastanowię się nad odwiedzeniem tej właśnie przychodni. W 100% polecam!</p>
+            <p class='quote-author'>- Daria Płocharczyk</p>
+          </div>
+          <div class='quote-element'>
+            <p class='quote-content'>Bardzo profesjonalnie a jednocześnie ciepło i życzliwie. Co istotne, można tak powiedzieć o wszystkich lekarzach tej przychodni.Zero komercji za to miłość i szacunek dla zwierząt widać na każdym kroku. Korzystam z usług tej przychodni od wielu lat i nigdy się nie zawiodłam.</p>
+            <p class='quote-author'>- Irena</p>
+          </div>
+          <div class='quote-element'>
+            <p class='quote-content'>Polecam tę fachową lecznicę z pełnym przekonaniem! :)) Wizytuję tu już od blisko 20 lat. Czasem trzeba trochę posiedzieć w poczekalni, ale za to panowie mają dużo czasu i zaangażowania dla każdego pacjenta, co mi się podoba najbardziej!!! :))) Pozdrowienia i podziękowania dla p. Kamińskiego i p. Grzeszczuka :)</p>
+            <p class='quote-author'>- Dominika</p>
+          </div>
+          <div class='quote-element'>
+            <p class='quote-content'>Profesjonalnie, rzeczowo, ale ciepło. Szybko, ale dokładnie. I, choć cena nie gra roli - to wcale nie drogo. Polecam!!!</p>
+            <p class='quote-author'>- Ewa</p>
+          </div>
+          <div class='quote-element'>
+            <p class='quote-content'>Byłam już w kilku poradniach weterynaryjnych, ale jak jest szybka awaria z kotem, intuicyjnie pędzę tu. Fachowa ekipa i porządny sprzęt, decyzje o jego wykorzystaniu zapadają natychmiast (jest problem? Od razu USG i sprawdzamy, o co chodzi). Już raz mi tu kota przywrócili z powrotem do żywych. Szczególnie polecam p. Bogusława - bez względu na długość oczekującej kolejki kudłatych pacjentów zajmie się zwierzęciem troskliwie, poświęcając mu odpowiednio dużo czasu i zainteresowania. Ciepła, życzliwa osoba z prawdziwym powołaniem!</p>
+            <p class='quote-author'>- Ola</p>
+          </div>
+          <div class='quote-element'>
+            <p class='quote-content'>Polecam tę przychodnię. Choć pozwoliłam Cookiemu odejść, wiedziałam, że Ci lekarze byliby w stanie o niego walczyć do końca. Nigdy nie widziałam tak profesjonalnej opieki, troski i dbania o zwierzęta jaką znalazłam tam. Na pierwszym miejscu są tam zwierzęta, a nie portfele właścicieli. I jeśli kiedykolwiek będę szła z jakimś swoim pupilem do weterynarza to pójdę tylko do tej przychodni.</p>
+            <p class='quote-author'>- Aleksandra Witwicka</p>
+          </div>
+          <div class='quote-element'>
+            <p class='quote-content'>Polecam serdecznie Przychodnię Weterynaryjną Vet-Med, gdyż pracują w niej doskonali specjaliści, którzy są fachowcami w swojej dziedzinie, o czym przekonałam się ja i mój pies Cziko.</p>
+            <p class='quote-author'>- Asia</p>
+          </div>
+          <div class='quote-element'>
+            <p class='quote-content'>Bardzo polecam tę przychodnię, korzystam z usług od ładnych paru lat i wszystkie moje psiaki były tu leczone, mam pełne zaufanie szczególnie do pana Bogusława Grzeszczuka, jest świetnym lekarzem od którego zawsze bije ciepłe uczucie do zwierząt, niesamowicie pozytywna osoba i bardzo fachowo podchodzi do wszystkich kwestii, serdecznie polecam.</p>
+            <p class='quote-author'>- Ewelina</p>
+          </div>
+          <div class='quote-element'>
+            <p class='quote-content'>Chciałabym tą drogą podziękować Lekarzom tej przychodni za bardzo fachową opiekę nad moim pupilkiem Mucką i za udana operację.</p>
+            <p class='quote-author'>- Urszula Pakosz</p>
+          </div>
+          <div class='quote-element'>
+            <p class='quote-content'>Jestem szczęśliwą właścicielką 7. miesięcznego pieska, który dzięki pomocy lekarza weterynarii Wiesława Rutki został szybko zdiagnozowany i wyleczony. Teraz szczęśliwie biega i cieszy się życiem dzięki pomocy, która została mu okazana. Bardzo serdecznie polecam ten gabinet weterynaryjny, ponieważ mają bardzo miłych lekarzy, którzy są przyjaciółmi zwierząt i starają się jak tylko mogą, aby pomóc chorym i bezbronnym zwierzątkom.</p>
+            <p class='quote-author'>- Natalia Mordoń</p>
+          </div>
+        </div>
       </div>
     </section>
-    <section class='wrapper'>
+    <section class='wrapper contact-container' id='contact'>
       <h1>Kontakt</h1>
       <div class='contact'>
         <div class='contact-section'>
-          <h2>Vet-Med Bis s.c.</h2>
+          <h2>Vet-Med-Bis s.c.</h2>
           <p>ul. Dębowa 6a<br/>43-100 Tychy</p>
-          <p>telefon: (32) 227 31 12</p>
+          <p>
+            telefon:
+            <span itemprop='telephone'>(32) 227 31 12</span>
+          </p>
         </div>
         <div class='contact-section'>
           <h2>Godziny otwarcia</h2>
@@ -133,8 +251,23 @@
         </div>
       </div>
       <div class='map'>
-        <img class='google-map' src='http://placehold.it/500x500'>
+        <a class='map-link' href='https://goo.gl/maps/PoC4MUM4JyM2'>
+          <image class='map-screen' src='images/map.png'></image>
+        </a>
+        <iframe allowfullscreen='true' frameborder='0' height='450' src='https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2558.4814685272036!2d18.987755051604818!3d50.11471191927877!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4716c80205e7abbd%3A0x35f07a03fd58b62!2sD%C4%99bowa+6A%2C+43-100+Tychy!5e0!3m2!1sen!2spl!4v1457183958779' style='border:0' width='600'></iframe>
       </div>
     </section>
+    <footer>
+      © 2016 Vet-Med-Bis s.c.
+      <br>
+      <div class='credits'>
+        Icons made by
+        <a href='http://www.freepik.com' title='Freepik'>Freepik</a>
+        from
+        <a href='http://www.flaticon.com' title='Flaticon'>www.flaticon.com</a>
+        is licensed by
+        <a href='http://creativecommons.org/licenses/by/3.0/' target='_blank' title='Creative Commons BY 3.0'>CC 3.0 BY</a>
+      </div>
+    </footer>
   </body>
 </html>
